--- a/src/LetzFly/project.json
+++ b/src/LetzFly/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.1",
@@ -45,7 +45,8 @@
     "Google.Apis.QPXExpress.v1": "1.20.0.554",
     "Google.Apis": "1.20.0",
     "Newtonsoft.Json": "9.0.1",
-    "RestSharp.NetCore": "105.2.3"
+    "RestSharp.NetCore": "105.2.3",
+    "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final"
   },
 
   "tools": {
